--- a/356F 2/app/src/main/res/layout/activity_profile_edit_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_profile_edit_page.xml
@@ -19,7 +19,8 @@
         android:layout_height="130dp"
         android:layout_below="@+id/btnLogout"
         android:layout_alignParentStart="true"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/ic_launcher"
+        android:scaleType="fitCenter" />
 
     <TextView
         android:text="user ID :"
@@ -77,7 +78,7 @@
     <Button
         android:text="Submit"
         android:textSize="13sp"
-        android:id="@+id/tvUserID"
+        android:id="@+id/btnSubmit"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_below="@+id/rbF"
@@ -97,11 +98,11 @@
     <Button
         android:text="cancel"
         android:textSize="13sp"
-        android:id="@+id/btnWishList"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_alignTop="@+id/tvUserID"
-        android:layout_toEndOf="@+id/rbF" />
+        android:layout_alignTop="@+id/btnSubmit"
+        android:layout_toEndOf="@+id/rbF"
+        android:id="@+id/btnCancel" />
 
     <RadioButton
         android:text="M"
