--- a/356F 2/app/src/main/res/layout/fragment_frag_profile.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_profile.xml
@@ -129,7 +129,8 @@
             android:layout_marginStart="23dp"
             android:layout_height="130dp"
             android:layout_below="@+id/btnLogout"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:scaleType="fitCenter" />
 
         <TextView
             android:text="name:"
@@ -147,7 +148,8 @@
             style="@style/Widget.AppCompat.Button"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_alignEnd="@+id/ivIcon" />
+            android:layout_alignEnd="@+id/ivIcon"
+            android:id="@+id/btnWishList" />
 
         <Button
             android:text="edit"
