--- a/356F 2/app/src/main/res/layout/activity_transaction_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_transaction_page.xml
@@ -17,10 +17,20 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
+        <TextView
+            android:text="Deposit/Withdraw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView6"
+            android:textSize="28sp"
+            android:textColor="@color/common_plus_signin_btn_text_light_focused"
+            android:gravity="center"
+            android:layout_marginBottom="25dp" />
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="wrap_content">
 
             <RadioButton
                 android:text="deposit"
@@ -37,6 +47,44 @@
                 android:layout_weight="1"
                 android:checked="false" />
         </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="Enter amount:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView10"
+                android:layout_weight="1"
+                android:textSize="18sp" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/edtAmount"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <TextView
+            android:text="Current Amount: $1000"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView17"
+            android:textSize="18sp"
+            android:textAlignment="center" />
+
+        <TextView
+            android:text="Enter Security Code"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView22"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="10dp" />
 
         <EditText
             android:layout_width="match_parent"
@@ -59,7 +107,8 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:layout_marginTop="40dp">
 
             <Button
                 android:text="cancel"
