--- a/356F 2/app/src/main/res/layout/activity_transaction_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_transaction_page.xml
@@ -37,7 +37,8 @@
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/radDeposit"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:layout_marginStart="15dp" />
 
             <RadioButton
                 android:text="withdraw"
@@ -59,7 +60,30 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView10"
                 android:layout_weight="1"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_marginStart="15dp" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/edtAmount"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="Banking Account:"
+                android:layout_width="158dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView10"
+                android:textSize="18sp"
+                android:layout_marginStart="15dp" />
 
             <EditText
                 android:layout_width="wrap_content"
@@ -89,20 +113,12 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/account"
-            android:singleLine="true"
-            android:hint="account" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/password"
             android:singleLine="true"
-            android:hint="@string/prompt_password" />
+            android:hint="@string/prompt_password"
+            android:layout_marginStart="15dp" />
 
         <LinearLayout
             android:orientation="horizontal"
