--- a/356F 2/app/src/main/res/layout/activity_profile_edit_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_profile_edit_page.xml
@@ -11,17 +11,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.bunnyfung.a356f.ProfileEditPage">
 
-    <ImageButton
-        android:layout_width="130dp"
-        android:layout_marginTop="15dp"
-        android:id="@+id/ivIcon"
-        android:layout_marginStart="23dp"
-        android:layout_height="130dp"
-        android:layout_below="@+id/btnLogout"
-        android:layout_alignParentStart="true"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:scaleType="fitCenter" />
-
     <TextView
         android:text="user ID :"
         android:layout_width="wrap_content"
@@ -131,5 +120,16 @@
         android:id="@+id/textView4"
         android:layout_below="@+id/edtPhoneNum"
         android:layout_alignStart="@+id/textview3" />
+
+    <ImageButton
+        android:layout_width="130dp"
+        android:layout_marginTop="13dp"
+        android:id="@+id/ivIcon"
+        android:layout_marginStart="23dp"
+        android:layout_height="130dp"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:scaleType="fitCenter"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
